Linked CSS and JS docs to HTML doc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
  <html>
-    <title>Inov8 Velocity Racing</title>
-    <h1>Inov8 Velocity Racing</h1>
+    <head>
+        <title>Inov8 Velocity Racing</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script> 
+    </head>
+    <div id="Heading"><h1>Inov8 Velocity Racing</h1></div>
     <body>This is the BODY<body>
  </html>
