--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     </head>
     <div id="Heading"><h1>Inov8 Velocity Racing</h1></div>
     <body>This is the BODY<body>
+    <p>Hello!</p>
  </html>
