--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
  <html>
     <head>
-        <title>Inov8 Velocity Racing</title>
+        <title>Inov8 Velocity Racing - Home Page</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <div id="Heading"><h1>Inov8 Velocity Racing</h1></div>
-    <body>This is the BODY<body>
-    <p>Hello!</p>
+    <div><h1 class="ubuntu-bold">Inov8 Velocity Racing</h1></div>
+    <body class="ubuntu-regular">We are Inov8 Velocity Racing, a 
+    Hydrogen R/C car team in the H2GP
+    competition.<body>
+    <p class="ubuntu-light">The H2GP competition </p>
  </html>
