--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html>
+<html>
     <head>
         <title>Inov8 Velocity Racing - Home Page</title>
         <link rel="stylesheet" href="style.css">
@@ -8,5 +8,5 @@
     <body class="ubuntu-regular">We are Inov8 Velocity Racing, a 
     Hydrogen R/C car team in the H2GP
     competition.<body>
-    <p class="ubuntu-light">The H2GP competition </p>
- </html>
+    <p class="ubuntu-light">The H2GP competition is a tournament about building and improving sustainable Hydrogen powered rc cars.</p>
+</html>
