--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
             <div class="team-container">
                 <!-- Example for each team member -->
                 <div class="team-member">
-                    <img src="images/member1.jpg" alt="Member 1" class="team-photo">
+                    <img src="images/liam.jpg" alt="Liam" class="team-photo">
                     <h3>Member 1</h3>
                     <p>Role: Team Leader</p>
                     <p>Description: Leads the team, manages tasks, and oversees the project's progress.</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member2.jpg" alt="Member 2" class="team-photo">
+                    <img src="images/samuel.jpg" alt="Samuel" class="team-photo">
                     <h3>Member 2</h3>
                     <p>Role: Engineer</p>
                     <p>Description: Designs and optimizes the car's mechanical systems.</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member3.jpg" alt="Member 3" class="team-photo">
+                    <img src="images/felix.jpg" alt="Felix" class="team-photo">
                     <h3>Member 3</h3>
                     <p>Role: Programmer</p>
                     <p>Description: Develops software and integrates systems for the car.</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member4.jpg" alt="Member 4" class="team-photo">
+                    <img src="images/riley.jpg" alt="Riley" class="team-photo">
                     <h3>Member 4</h3>
                     <p>Role: Marketing</p>
                     <p>Description: Manages outreach, branding, and team promotion.</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/member5.jpg" alt="Member 5" class="team-photo">
+                    <img src="images/declan.jpg" alt="Declan" class="team-photo">
                     <h3>Member 5</h3>
                     <p>Role: Designer</p>
                     <p>Description: Creates the car's aesthetic and works on creative visuals.</p>
