added member names

--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@
                 <!-- Example for each team member -->
                 <div class="team-member">
                     <img src="images/liam.jpg" alt="Liam" class="team-photo">
-                    <h3>Member 1</h3>
-                    <p>Role: Team Leader</p>
-                    <p>Description: Leads the team, manages tasks, and oversees the project's progress.</p>
+                    <h3>Liam</h3>
+                    <p>role</p>
+                    <p>description</p>
                 </div>
                 <div class="team-member">
                     <img src="images/samuel.jpg" alt="Samuel" class="team-photo">
-                    <h3>Member 2</h3>
-                    <p>Role: Engineer</p>
-                    <p>Description: Designs and optimizes the car's mechanical systems.</p>
+                    <h3>Samuel</h3>
+                    <p>role</p>
+                    <p>description</p>
                 </div>
                 <div class="team-member">
                     <img src="images/felix.jpg" alt="Felix" class="team-photo">
-                    <h3>Member 3</h3>
-                    <p>Role: Programmer</p>
-                    <p>Description: Develops software and integrates systems for the car.</p>
+                    <h3>Felix</h3>
+                    <p>role</p>
+                    <p>description</p>
                 </div>
                 <div class="team-member">
                     <img src="images/riley.jpg" alt="Riley" class="team-photo">
-                    <h3>Member 4</h3>
-                    <p>Role: Marketing</p>
-                    <p>Description: Manages outreach, branding, and team promotion.</p>
+                    <h3>Riley</h3>
+                    <p>role</p>
+                    <p>description</p>
                 </div>
                 <div class="team-member">
                     <img src="images/declan.jpg" alt="Declan" class="team-photo">
-                    <h3>Member 5</h3>
-                    <p>Role: Designer</p>
-                    <p>Description: Creates the car's aesthetic and works on creative visuals.</p>
+                    <h3>Declan</h3>
+                    <p>role</p>
+                    <p>description</p>
                 </div>
             </div>
         </section>
@@ -73,9 +73,8 @@
     <footer>
         <p>Follow us on:</p>
         <ul class="social-links">
-            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
-            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
-            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+        <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
         </ul>
         <p>&copy; 2024 Inov8 Velocity Racing. All rights reserved.</p>
     </footer>
